--- a/scss/section/maps.scss
+++ b/scss/section/maps.scss
@@ -49,7 +49,9 @@
 				opacity: 1;
 				span {
 					text-transform: uppercase;
+					white-space: nowrap;
 					font-size: .6em;
+					color: $c-b;
 				}
 				#distance {
 					font-size: 1.1em;
@@ -77,8 +79,10 @@
 					}
 				}
 			}
-			&.light .path-all {
-				stroke: $c-4;
+			&.light {
+				.path-all {
+					stroke: $c-4;
+				}
 			}
 		}
 		@media screen and (max-width: 50em) {
